--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Designing Company In Chennai</title>
-    <link rel="shortcut icon" href="./assets/image/cmpnyLogo.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="cmpnyLogo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -30,7 +30,7 @@
             <nav class="navBar">
                 <div class="navBody grid-2">
                     <figure class="logo">
-                        <img src="./assets/image/dflogo.png" alt="logo">
+                        <img src="dflogo.png" alt="logo">
                     </figure>
                     <ul class="navLinks dflex ">
                         <li><a href="#">About Us <i class="fa fa-chevron-down"></i></a></li>
@@ -81,7 +81,7 @@
                         <button>Read More</button>
                     </div>
                     <figure class="innovativeImage dflex">
-                        <img src="./assets/image/innovativeImage.jpg" alt="">
+                        <img src="innovativeImage.jpg" alt="">
                     </figure>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <div class="cardBody grid-3">
                         <div class="cardDetails flex-col-start">
                             <figure>
-                                <img src="./assets/image/card1.png" alt="">
+                                <img src="card1.png" alt="">
                             </figure>
                             <h2>Web Design & Development</h2>
                             <p>Our excellent web design solutions are also one of the reasons why Double Focus has
@@ -136,7 +136,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card2.png" alt="">
+                                <img src="card2.png" alt="">
                             </figure>
                             <h2>Web Hosting & Maintenance</h2>
                             <p>Blazing Fast Web Hosting with Virus Protection & Anti-spam.Top-quality hosting is cheaper
@@ -153,7 +153,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card3.png" alt="">
+                                <img src="card3.png" alt="">
                             </figure>
                             <h2>Ecommerce Web Designing</h2>
                             <p>Best way to Sell your product online. We create online ecommerce applications for any
@@ -169,7 +169,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card4.png" alt="">
+                                <img src="card4.png" alt="">
                             </figure>
                             <h2>Mobile App Development</h2>
                             <p>We are the top android app development company in India who provide flawless android
@@ -184,7 +184,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card5.png" alt="">
+                                <img src="card5.png" alt="">
                             </figure>
                             <h2>Corporate Branding</h2>
                             <p>Brand is the most valuable asset of any entity. Its not just LOGO, but the name, slogan,
@@ -200,7 +200,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card6.png" alt="">
+                                <img src="card6.png" alt="">
                             </figure>
                             <h2>E-publishing Services</h2>
                             <p>Double Focus typesetting Services, is aimed to provide quality services to the worldwide
@@ -216,7 +216,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card7.png" alt="">
+                                <img src="card7.png" alt="">
                             </figure>
                             <h2>Digital Marketing</h2>
                             <p>Most of the Companies trust Double Focus to manage their online presence and build
@@ -232,7 +232,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card8.png" alt="">
+                                <img src="card8.png" alt="">
                             </figure>
                             <h2>Email Services</h2>
                             <p>Get professional email hosting services and create mailboxes that match your domain name.
@@ -247,7 +247,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card9.png" alt="">
+                                <img src="card9.png" alt="">
                             </figure>
                             <h2>Payment Gateway</h2>
                             <p>We integrate right from Indian gateways to any international payment gateways. Get the
@@ -262,7 +262,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card10.png" alt="">
+                                <img src="card10.png" alt="">
                             </figure>
                             <h2>ERP Software</h2>
                             <p>Speed up your business performance with integrated modules of the most advanced ERP
@@ -276,7 +276,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card11.png" alt="">
+                                <img src="card11.png" alt="">
                             </figure>
                             <h2>Domain Name</h2>
                             <p>Buying Domain name of your choice is the first step to build your online presence. Buy
@@ -290,7 +290,7 @@
                         </div>
                         <div class="cardDetails">
                             <figure>
-                                <img src="./assets/image/card12.png" alt="">
+                                <img src="card12.png" alt="">
                             </figure>
                             <h2>
                                 Website Security</h2>
@@ -353,7 +353,7 @@
                             <hr>
                             <div class="details dflex">
                                 <figure>
-                                    <img src="./assets/image/chennai-web-designing.png" alt="">
+                                    <img src="chennai-web-designing.png" alt="">
                                 </figure>
                                 <div class="span"><span class="blackClr">MTAB</span>
                                     <p class="redCLr">CEO</p>
@@ -367,7 +367,7 @@
                             <hr>
                             <div class="details dflex">
                                 <figure>
-                                    <img src="./assets/image/hotel-website-designing.png" alt="">
+                                    <img src="hotel-website-designing.png" alt="">
                                 </figure>
 
                                 <div class="span"><span class="blackClr">Gokulam Hotels</span>
@@ -381,7 +381,7 @@
                             <hr>
                             <div class="details dflex">
                                 <figure>
-                                    <img src="./assets/image/website-designing-hotelchandrapark.png" alt="">
+                                    <img src="website-designing-hotelchandrapark.png" alt="">
                                 </figure>
                                 <div class="span"><span class="blackClr">Hotel Chandra Park</span>
                                     <p class="redCLr">GM</p>
@@ -398,7 +398,7 @@
                     <div class="feelFreeBody grid-3">
                         <div class="iconImage dflex">
                             <figure>
-                                <img src="./assets/image/tick.PNG" alt="">
+                                <img src="tick.PNG" alt="">
                             </figure>
                         </div>
                         <div class="para dflex-col-start">
@@ -425,19 +425,19 @@
                     <div class="trustedImageBody grid-5">
                         <figure class="trustedImage dflex">
 
-                            <img src="./assets/image/logo1.jpg" alt="">
+                            <img src="logo1.jpg" alt="">
                         </figure>
                         <figure class="trustedImage dflex">
-                            <img src="./assets/image/logo2.jpg" alt="">
+                            <img src="logo2.jpg" alt="">
                         </figure>
                         <figure class="trustedImage dflex">
-                            <img src="./assets/image/logo3.jpg" alt="">
+                            <img src="logo3.jpg" alt="">
                         </figure>
                         <figure class="trustedImage dflex">
-                            <img src="./assets/image/logo4.jpg" alt="">
+                            <img src="logo4.jpg" alt="">
                         </figure>
                         <figure class="trustedImage dflex">
-                            <img src="./assets/image/logo5.jpg" alt="">
+                            <img src="logo5.jpg" alt="">
                         </figure>
                     </div>
                 </div>
@@ -514,12 +514,11 @@
             <div class="termsImage">
                 <p>Terms and Conditions/ Cancellation Policy/ Privacy Policy</p>
                 <figure>
-                    <img src="./assets/image/pymnt-strip.png" alt="">
+                    <img src="pymnt-strip.png" alt="">
                 </figure>
             </div>
         </div>
         </div>
     </footer>
 </body>
-
 </html>
